<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Luchiana for Android</string>
    <string name="connexion">Connexion</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="options">Options</string>
    <string name="serveur">Serveur:</string>
    <string name="port">Port:</string>
    <string name="user">Utilisateur:</string>
    <string name="password">Mot de passe:</string>
    <string name="save">Sauvegarder</string>
    <string name="envoyer">Envoyer</string>
    <string name="warning">Vous devez d\'abord vous connecter</string>

</resources>
